Minor corrections. Added class to log steps to print later instead of printing steps directly.